V3D/Broadcom (Raspberry Pi 4) - GLES 3.1 - GL_EXT_texture_norm16 advertised, but not usable
See attached apitrace file.
It might be that the driver doesn't support GL_EXT_texture_norm16
at all, or the extension is being advertised appropriately but isn't using the driver correctly.
Attempting to attach 16-bit textures results in GL_FRAMEBUFFER_UNSUPPORTED
and the framebuffer remaining in an incomplete state.
Disabling GL_EXT_texture_norm16
on the app (in this case, a game) makes the framebuffer attachment work appropriately.
Details:
- Raspberry Pi 4 (4GB)
- Raspbian (Debian-based) (latest)
- Mesa 19.3.2 (20.0.0 also tested)
- OpenGL ES 3.1 (via SDL 2.0.8)
Edited by Alice D